--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -19,4 +19,10 @@
 
 .App-link {
   color: #09d3ac;
+} */
+.gray-box{
+  background: gray;
+  width: 64px;
+  height: 64px;
+  
 }
